# VideoDownloader

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jeffmony/downloader/: MainActivity.java
app/src/main/java/com/jeffmony/videodemo/: DownloadSettingsActivity.java  MainActivity.java  MergeDownloadFileActivity.java  MergeVideoListAdapter.java  MyApplication.java  PlayerActivity.java  VideoDownloadListActivity.java  VideoListAdapter.java
app/src/main/java/com/jeffmony/videodemo/download/: DownloadSettingsActivity.java  VideoDownloadListActivity.java  VideoDownloadListAdapter.java
app/src/main/java/com/jeffmony/videodemo/merge/: MergeDownloadFileActivity.java  MergeVideoListAdapter.java  VideoMergeActivity.java
app/src/main/java/com/jeffmony/videodemo/play/: PlayerActivity.java
app/src/main/java/com/jeffmony/videodemo/transcode/: VideoTranscodeActivity.java
app/src/main/res/layout/: activity_download_list.xml  activity_download_settings.xml  activity_main.xml  activity_merge_download_file.xml  activity_player.xml  activity_video_merge.xml  download_item.xml  m3u8_item.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
cpp_source/: .gitignore  CMakeLists.txt  build_cpp.sh  main.cpp  video_downloader
downloader/: build.gradle
downloader/src/main/: AndroidManifest.xml
downloader/src/main/cpp/: CMakeLists.txt  android_log.h  jeffmony.cpp  jeffmony_ffmpeg.cpp
downloader/src/main/cpp/include/libavutil/: ffversion.h
downloader/src/main/java/com/jeffmony/downloader/: DownloadConstants.java  VideoDownloadConfig.java  VideoDownloadException.java  VideoDownloadManager.java  VideoDownloadQueue.java  VideoInfoParserManager.java
downloader/src/main/java/com/jeffmony/downloader/common/: DownloadConstants.java
downloader/src/main/java/com/jeffmony/downloader/database/: VideoDownloadDatabaseHelper.java  VideoDownloadSQLiteHelper.java
downloader/src/main/java/com/jeffmony/downloader/listener/: IDownloadInfosCallback.java  IDownloadTaskListener.java  IM3U8MergeResultListener.java  IVideoInfoListener.java  IVideoInfoParseListener.java
downloader/src/main/java/com/jeffmony/downloader/m3u8/: M3U8.java  M3U8Constants.java  M3U8Seg.java  M3U8Ts.java  M3U8Utils.java
downloader/src/main/java/com/jeffmony/downloader/merge/: IM3U8MergeListener.java  M3U8MergeInfo.java  M3U8MergeManager.java  MergeError.java  TsInfo.java
downloader/src/main/java/com/jeffmony/downloader/model/: MultiRangeInfo.java  Video.java  VideoDownloadInfo.java  VideoTaskItem.java  VideoTaskState.java
downloader/src/main/java/com/jeffmony/downloader/process/: FFmpegRemuxUtils.java  IM3U8MergeListener.java  IM3U8MergeResultListener.java  VideoProcessManager.java
downloader/src/main/java/com/jeffmony/downloader/task/: BaseVideoDownloadTask.java  M3U8VideoDownloadTask.java  MultiSegVideoDownloadTask.java  SingleVideoCacheThread.java  VideoDownloadTask.java
downloader/src/main/java/com/jeffmony/downloader/transcode/: FFmpegUtils.java  VideoTranscodeError.java  VideoTranscodeInfo.java  VideoTranscodeManager.java
downloader/src/main/java/com/jeffmony/downloader/utils/: ContextUtils.java  DownloadExceptionUtils.java  HttpUtils.java  LogUtils.java  Utility.java  VideoDownloadUtils.java  VideoStorageUtils.java  WorkerThreadHandler.java
files/: Download-failed-files.xlsx  ffmpeg.txt  testUrl.txt
gradle/wrapper/: gradle-wrapper.properties
libdownloader/: build.gradle
libdownloader/src/main/: AndroidManifest.xml
